crates/tests/re_redap_tests/src/tests/snapshots/re_redap_tests__tests__unregister_segment__products_4_remove_all_layers_for_segments_23_manifest_data.snap
---
source: crates/tests/re_redap_tests/src/tests/unregister_segment.rs
expression: filtered_batch.format_snapshot(false)
---
┌──────────────────┬──────────────────┬──────────────────┬──────────────────┬──────────────────────────────────────────┬───────────────────────────┐
│ rerun_layer_name ┆ rerun_segment_id ┆ rerun_layer_type ┆ rerun_num_chunks ┆ rerun_schema_sha256                      ┆ rerun_registration_status │
╞══════════════════╪══════════════════╪══════════════════╪══════════════════╪══════════════════════════════════════════╪═══════════════════════════╡
│ A                ┆ my_segment_id1   ┆ rrd              ┆ 2                ┆ 7445711ea6547499a41035b6572d7adb6021f9e… ┆ done                      │
├╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┼╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌╌┤
│ C                ┆ my_segment_id1   ┆ rrd              ┆ 2                ┆ 7445711ea6547499a41035b6572d7adb6021f9e… ┆ done                      │
└──────────────────┴──────────────────┴──────────────────┴──────────────────┴──────────────────────────────────────────┴───────────────────────────┘
